--- a/hw/hw.css
+++ b/hw/hw.css
@@ -18,25 +18,25 @@ body {
 h1.title {
 	font-weight: 700;
 	font-family: 'Source Sans Pro', sans-serif;
-	color: #B8DDD8;
+	color: #335450;
 }
 
 h1 {
 	font-style: normal;
 	font-family: 'Source Sans Pro', sans-serif;
-	color: #B8DDD8;
+	color: #335450;
 }
 
 h2 {
 	font-style: normal;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 400;
-	color: #B8DDD8;
+	color: #335450;
 }
 
 h3.subtitle {
 	font-style: normal;
-	color: #B8DDD8;
+	color: #335450;
 }
 
 h4 {
